# Links

./: .gitignore  Cargo.toml  README.md  config.toml.example
.sqlx/: query-20c3006820ce0c7be066f3d851daab4d75e5425e348a9088f7cc1060dab05ba7.json  query-53373d1c61c00c05d24d8c9cccd53fa113c638b613c21f36a1a29721a8014625.json  query-9b2a32544b84a730950697fddf047b315f22cb117fab08ce863141f2f29efedc.json  query-a2b8c55d9a679466289ce2a61dffdb21549abbd3167956b3009ee9d6cac0939d.json  query-a99dacddfe54f22d475c3c09c76bef49ec13e8adf9b7367aff4dc66c4d9be063.json  query-b4a3b0ae9c157a5a6b7922189cfa08a41627c4cc8b8921632a0ecce482001ecd.json  query-c24fab522996a32ff2f9b36779ebe8e296364cda491ca233db0c935f569f8c63.json  query-c31cb1e7448383b6879dc53a287ec22d09400b1c17d0ea14368c4f30c8ca0291.json  query-d25a3638aac349d900607d3c0bcdb26953505e897e9125274d2e9944867961d5.json  query-d5fcbbb502138662f670111479633938368ca7a29212cf4f72567efc4cd81a85.json  query-ef6714178b8b306eaaafbc0fcb9e5eaa5cd5a8dd37f65ec508fcb1b7acf6e5c6.json  query-f2e720888a25d6f666acf9fd7165dd2ef8f59be8aa9cacb0e649bb37b08ea5cf.json
migrations/: 20240121204023_initial.sql  20240123040527_make_email_unique.sql  20240123112552_create-groups.sql  20240123123246_add-group-order.sql  20240130200244_change_email_to_username.sql
src/: auth.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  model.rs  routes.rs
src/handlers/: link.rs  mod.rs  user.rs
src/models/: link.rs  user.rs
templates/: admin.html  base.html  index.html  login.html  management.html  password.html
